# multi-level-id-strip

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PASSPORT_SPECIMENS_MANIFEST.txt  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  dataset.jsonl  deny.toml
.cargo/: config.toml
.github/workflows/: bench-data-collection.yml  ci.yml  pages.yml
changelog.d/: README.md  bench-line1-flag-rate.added.md  bench-per-field-cer.added.md  changelog-fragments.changed.md  line1-integrity-nationality-digits.added.md  m5-closeout.changed.md  m5-geometry-band.added.md  m5-geometry-wiring.added.md  m5-job-queue.added.md  m5-ocr-geometry.added.md  m6-orientation-scoping.changed.md  mrz-0.3.0.added.md  mrz-0.4.0.added.md  mrz-0.4.0.changed.md  mrz-0.5.0.added.md  mrz-0.5.1.added.md  mrz-emit-td1-td2.added.md  mrz-mrv-visas.added.md  mrz-publish-readiness.added.md  ocr-download-poisoned-cache.fixed.md
crates/mlis-cli/: Cargo.toml
crates/mlis-cli/src/: main.rs
crates/mlis-cli/tests/: license_roundtrip.rs
crates/mlis-core/: Cargo.toml
crates/mlis-core/src/: audit.rs  crypt.rs  lib.rs
crates/mlis-license/: Cargo.toml  pubkey.b64
crates/mlis-license/src/: fingerprint.rs  keys.rs  lib.rs  sign.rs
crates/mlis-llm/: Cargo.toml
crates/mlis-llm/src/: lib.rs  prompt.rs  repair.rs  verify.rs
crates/mlis-llm/tests/: native_llm_e2e.rs  parity.rs
crates/mlis-ocr/: Cargo.toml  build.rs
crates/mlis-ocr/examples/: check_sample.rs  mrz_corpus.rs
crates/mlis-ocr/src/: embedded.rs  known_good_hashes.rs  lib.rs  preprocess.rs  verify.rs
crates/mlis-pipeline/: Cargo.toml  build.rs
crates/mlis-pipeline/src/: infer.rs  lib.rs  ocr.rs
crates/mlis-pipeline/tests/: bridge_e2e.rs  rust_ocr_smoke.rs
crates/mlis-serve/: Cargo.toml
crates/mlis-serve/src/: index.html  main.rs
crates/mrz/: Cargo.toml  README.md
crates/mrz-wasm/: Cargo.toml
crates/mrz-wasm/src/: lib.rs
crates/mrz/examples/: checksum_blindspots.rs
crates/mrz/src/: blindspot.rs  checksum.rs  countries.rs  dates.rs  emit.rs  lib.rs  parser.rs  repair.rs
crates/mrz/tests/: blindspot.rs  fuzz_props.rs  icao_vectors.rs  pivot.rs  repair.rs  roundtrip.rs  serde_roundtrip.rs
crates/ocr-daemon/: Cargo.toml
crates/ocr-daemon/src/: lib.rs  preprocess.rs
crates/synthpass-bench/: Cargo.toml
crates/synthpass-bench/src/: lib.rs
crates/synthpass-cli/: Cargo.toml
crates/synthpass-cli/src/: generate.rs  main.rs
crates/synthpass-cli/tests/: decrypt_roundtrip.rs  license_roundtrip.rs
crates/synthpass-core/: Cargo.toml
crates/synthpass-core/src/: audit.rs  fusion.rs  lib.rs  normalize.rs  v2.rs
crates/synthpass-gen/: Cargo.toml
crates/synthpass-gen/examples/: generate_sample.rs
crates/synthpass-gen/fonts/: README.md
crates/synthpass-gen/src/: data.rs  degrade.rs  fonts.rs  labels.rs  layout.rs  lib.rs  model.rs  mrz_line.rs  render.rs
crates/synthpass-gen/tests/: degrade.rs  determinism.rs  labels_bounds.rs  mrz_roundtrip.rs  watermark.rs
crates/synthpass-license/: Cargo.toml
crates/synthpass-license/src/: fingerprint.rs  keys.rs  lib.rs  sign.rs
crates/synthpass-llm/: Cargo.toml
crates/synthpass-llm/src/: lib.rs  prompt.rs  repair.rs  verify.rs
crates/synthpass-llm/tests/: native_llm_e2e.rs  parity.rs
crates/synthpass-ocr/: Cargo.toml  build.rs
crates/synthpass-ocr/examples/: check_sample.rs  integrity_survey.rs  mrz_corpus.rs  visualize_mrz_band.rs
crates/synthpass-ocr/src/: download.rs  geometry.rs  lib.rs  preprocess.rs  verify.rs
crates/synthpass-ocr/tests/: native_ocr_e2e.rs
crates/synthpass-pipeline/: Cargo.toml
crates/synthpass-pipeline/src/: infer.rs  jobs.rs  lib.rs  metrics.rs  ocr.rs
crates/synthpass-pipeline/tests/: pii_logging.rs  rust_ocr_smoke.rs
crates/synthpass-serve/: Cargo.toml
crates/synthpass-serve/src/: index.html  main.rs
docker/: Dockerfile.builder  Dockerfile.inferer  Dockerfile.musl  Dockerfile.serve  docker-compose.yml
docling-app/src/: index.html  main.rs
docling-client/: Cargo.toml
docling-client/src/: main.rs
docs/: ADVERSARIAL.md  ARCHITECTURE.md  BRANDING.md  CORPUS_COVERAGE.md  FOUNDATIONAL_STRATEGY.md  LICENSING.md  README.md  REBRAND_MIGRATION.md  ROADMAP.md  SYNTHPASS.md  VISION.md  document-layout-survey.jsonl  integrity-survey.jsonl  mlis-v0-4-0-archtitecture-breakdown.md  mlis_v2_0_0_preliminary_design.md  rebranding_identra_synthpass.md  roadmap-v0-5-1-to-v1-0-0-gemmini-pro-deepseek-pro.md  synthpass_v2_0.md
fuzz/: Cargo.toml
fuzz/corpus/mrz_find_and_parse/: dropped_filler_mid_line  html_escaped_merged_lines  ocr_noise_in_text  td1_single_paragraph_k_misreads  td1_specimen  td2_specimen  td3_specimen  tesseract_k_l_misreads
fuzz/fuzz_targets/: mrz_find_and_parse.rs  mrz_parse_td.rs
mrz/: Cargo.toml
mrz/src/: lib.rs
pipeline/src/: lib.rs
proto/: inferer.proto
python/: generate_grpc.py  pyproject.toml  smoke_test.py
python/inferer/: __init__.py  __main__.py  adapter.py  loader.py  prompts.py  schemas.py  server.py
samples/: Estonia_PASSPORT_face.json  README.md  SerbianID_back.md  Slovenian_ID_Card_2022_-_Rear.json  Slovenian_ID_Card_2022_-_Rear.md
samples/ocr_fixtures/: 2022_cetis_terra_condifea_passport_datapage3rd_inner_page.json  2022_cetis_terra_condifea_passport_datapage3rd_inner_page.md  Croatian_passport_data_page.json  Croatian_passport_data_page.md  Estonia_PASSPORT_face.md  Passport_of_Serbia_ID_2009_version.json  Passport_of_Serbia_ID_2009_version.md  SerbianID_back.json
scripts/: assemble-changelog.sh  watch-samples.ps1
tools/: fetch_wiki_category_with_images.py
web/: CNAME  checkin.html  fetch-vendor.sh  index.html  scan.js
web/pkg/: mrz_wasm.js  mrz_wasm_bg.wasm
