[workspace]
resolver = "2"
members = [
    "crates/mrz",
    "crates/mrz-wasm",
    "crates/mlis-core",
    "crates/mlis-llm",
    "crates/mlis-ocr",
    "crates/mlis-license",
    "crates/mlis-pipeline",
    "crates/mlis-cli",
    "crates/mlis-serve",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
authors = ["Rusmir Skopljak <rusmirskopljak@gmail.com>"]
license = "MIT"
repository = "https://github.com/ruledicaprio/multi-level-id-strip"
description = "Air-gapped, multi-level identity-document extraction: deterministic ICAO 9303 MRZ validation with a local LLM fallback — zero cloud calls."

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
image = "0.25"

# Release builds: fat LTO + single codegen unit for smaller, faster binaries
# (the WASM demo payload and the CLI/serve binaries both benefit).
[profile.release]
lto = true
codegen-units = 1
strip = true
