[project]
name = "mlis-inferer"
version = "0.4.0"
description = "Persistent Tier-2 LLM inference sidecar for multi-level-id-strip (gRPC, llama.cpp + Qwen GGUF)"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "pydantic>=2.5",
    "llama-cpp-python>=0.3",
]

[project.optional-dependencies]
# Tooling to (re)generate the gRPC stubs from ../proto/inferer.proto.
dev = ["grpcio-tools>=1.60"]

[project.scripts]
mlis-inferer = "inferer.server:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inferer"]
