[package]
name = "mlis-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
mrz = { path = "../mrz", features = ["serde", "zeroize"] }
mlis-core = { path = "../mlis-core", features = ["security"] }
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
serde_json = "1"
async-trait = "0.1"
zeroize = "1"
# Native Tesseract+Leptonica OCR engine — Linux/WSL only, opt-in.
ocr-daemon = { path = "../ocr-daemon", optional = true }
# Pure-Rust ocrs/rten OCR engine — the default OCR backend.
mlis-ocr = { path = "../mlis-ocr", optional = true }
# Tier-2 backend: native llama.cpp inference (mlis-llm), in-process.
mlis-llm = { path = "../mlis-llm", optional = true }

[features]
default = ["inferer-native", "ocr-native-rust"]
# Compile in the native OCR engine (requires libtesseract/libleptonica; Linux/WSL).
native-ocr = ["dep:ocr-daemon"]
# Default OCR backend: pure-Rust ocrs/rten, no external sidecar/C libs.
ocr-native-rust = ["dep:mlis-ocr"]
# Tier-2 backend: native llama.cpp inference (mlis-llm), no external sidecar.
inferer-native = ["dep:mlis-llm"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
# Re-encodes the sample JPEG to PNG/WebP for the format-coverage smoke test.
image = { workspace = true }
