[package]
name = "mlis-serve"
version.workspace = true
edition.workspace = true

[dependencies]
mlis-pipeline = { path = "../mlis-pipeline" }
mlis-license = { path = "../mlis-license" }
tokio = { workspace = true, features = ["fs", "net"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
