[package]
name = "mrz"
# Decoupled from the workspace `1.1.0`: independent public-release line.
#
# Under Cargo's 0.x rules the *minor* slot is the breaking slot. `MrzData`,
# `Checks` and `Format` are `#[non_exhaustive]`, so growing them is a patch
# (0.5.1); the five emit-side `*Fields` input structs are deliberately
# exhaustive, so adding a field to one of those is breaking (0.6.0). CI diffs
# this crate against its published baseline and fails a PR whose API change
# outruns the version below — see the `semver` job and CONTRIBUTING.md.
version = "0.5.1"
edition.workspace = true
# Verified floor for the zero-dependency default build, which is the whole of
# this crate's own source: `std::iter::repeat_n` (checksum.rs) and
# `Option::is_none_or` (checksum.rs) both stabilized in 1.82. Raising it is a
# minor version bump. CI enforces it (see the `msrv` job).
#
# Scoped to this package deliberately: the rest of the workspace is unpublished
# application code with heavier dependencies and no compatibility promise. The
# optional `serde`/`zeroize` features and the dev-dependency test suite follow
# their own upstream MSRVs, which are higher than this floor — a consumer on
# 1.82 pins those to matching versions.
rust-version = "1.82"
description = "Zero-dependency ICAO 9303 Machine Readable Zone (MRZ) parser, emitter, and check-digit validator for TD1/TD2/TD3 and MRV-A/MRV-B (visa) documents."
license = "MIT"
repository = "https://github.com/ruledicaprio/SynthPass"
readme = "README.md"
keywords = ["mrz", "icao", "passport", "9303", "ocr"]
categories = ["parser-implementations", "text-processing"]

# Render the `serde` and `zeroize` feature surfaces on docs.rs.
[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
# Optional, mirrors the `serde` feature above: keeps this crate zero-dep by
# default so it compiles cleanly to wasm32-unknown-unknown for the browser
# demo (mrz-wasm never enables this feature).
zeroize = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]

[dev-dependencies]
# Property-based "never panics on arbitrary input" regression suite (see
# tests/fuzz_props.rs). Dev-only: doesn't ship, doesn't affect the
# wasm32-unknown-unknown zero-dep build.
proptest = "1"
# Drives the `serde` round-trip test (tests/serde_roundtrip.rs, gated on the
# `serde` feature). Dev-only — not a published dependency.
serde_json = "1"
