[package]
name = "synthpass-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "synthpass-bench"
path = "src/bin/synthpass-bench.rs"

[dependencies]
# Always built with real glyphs regardless of synthpass-gen's own default —
# a benchmark measuring OCR hit rate against placeholder bars would be
# measuring the wrong thing.
synthpass-gen = { path = "../synthpass-gen", features = ["embedded-fonts"] }
synthpass-ocr = { path = "../synthpass-ocr" }
# The zero-dep checksum oracle deciding hit vs. miss.
mrz = { path = "../mrz" }
# `fusion::check_line1_integrity` — measures what fraction of Tier-1 hits
# still have a structurally suspect line 1 (see docs/ROADMAP.md's per-field
# CER note).
synthpass-core = { path = "../synthpass-core" }
image = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
