[package]
name = "synthpass-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "synthpass"
path = "src/main.rs"

[dependencies]
synthpass-pipeline = { path = "../synthpass-pipeline" }
synthpass-core = { path = "../synthpass-core", features = ["security"] }
synthpass-license = { path = "../synthpass-license" }
# Only needed here for `synthpass doctor`'s model-file/checksum check; the actual
# OCR call goes through synthpass-pipeline.
synthpass-ocr = { path = "../synthpass-ocr", optional = true }
# `synthpass generate` — synthetic passport image + label-JSON factory (M3). No
# real PII, so this command is explicitly exempt from the license gate.
synthpass-gen = { path = "../synthpass-gen" }
image = { workspace = true }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["ocr-native-rust"]
ocr-native-rust = ["dep:synthpass-ocr"]
# Bake the .rten OCR models into the binary at compile time — see
# synthpass-pipeline/synthpass-ocr and docs/ARCHITECTURE.md §10. Only used by the musl
# release build.
ocr-embedded = ["synthpass-pipeline/ocr-embedded"]

[dev-dependencies]
base64 = "0.22"
# Signs throwaway test licenses directly (not via synthpass-license's `vendor`
# feature — synthpass-cli must never build with that active, in any mode, so the
# shipped binary's dependency tree stays provably signing-free; see
# tests/license_roundtrip.rs).
ed25519-dalek = "3"
