[package]
name = "synthpass-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
# Unconditional: Extraction (PII) is always compiled, not behind `security`.
zeroize = { version = "1", features = ["derive"] }
# Tier-3 security (feature `security`): audit hashing + payload encryption.
sha2 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = { version = "1", optional = true }

[features]
security = ["dep:sha2", "dep:aes-gcm", "dep:base64", "dep:serde_json"]

[dev-dependencies]
serde_json = "1"
