[package]
name = "synthpass-license"
version.workspace = true
edition.workspace = true

[dependencies]
synthpass-core = { path = "../synthpass-core", features = ["security"] }
ed25519-dalek = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Keygen RNG — only pulled in by the vendor feature (see below).
getrandom = { version = "0.4", features = ["sys_rng"], optional = true }

[features]
# Signing/keygen (the vendor issuer binary) — never compiled into the
# customer-facing synthpass/synthpass-serve binaries, so they carry no private-key
# handling or keygen RNG dependency at all. `getrandom`'s `sys_rng` feature
# provides `SysRng` + a `rand_core` re-export that must be the SAME
# `rand_core` instance ed25519-dalek uses internally (both request "0.10",
# so Cargo unifies them) — a separately-declared `rand_core` dependency is a
# different Rust type even at a "compatible" version and won't satisfy
# `SigningKey::generate`'s trait bound.
vendor = ["ed25519-dalek/rand_core", "dep:getrandom"]

[[bin]]
name = "synthpass-license-issuer"
path = "src/bin/synthpass-license-issuer.rs"
required-features = ["vendor"]

[dev-dependencies]
