[package]
name = "synthpass-llm"
version.workspace = true
edition.workspace = true

[dependencies]
synthpass-core = { path = "../synthpass-core", features = ["security"] }
llama-cpp-2 = { version = "0.1.151", features = ["sampler"] }
serde_json = "1"
encoding_rs = "0.8"
zeroize = "1"

[dev-dependencies]
