[package]
name = "synthpass-serve"
version.workspace = true
edition.workspace = true

[dependencies]
synthpass-pipeline = { path = "../synthpass-pipeline" }
synthpass-license = { path = "../synthpass-license" }
tokio = { workspace = true, features = ["fs", "net"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Bake the .rten OCR models into the binary at compile time — see
# synthpass-pipeline/synthpass-ocr and docs/ARCHITECTURE.md §10. Only used by the musl
# release build.
ocr-embedded = ["synthpass-pipeline/ocr-embedded"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
